--- a/crates/uselesskey-bdd/Cargo.toml
+++ b/crates/uselesskey-bdd/Cargo.toml
@@ -10,24 +10,9 @@ rust-version.workspace = true
 cucumber.workspace = true
 tokio.workspace = true
 rsa.workspace = true
-ed25519-dalek.workspace = true
-p256 = { version = "0.13.2", features = ["ecdsa", "pkcs8", "pem"] }
-p384 = { version = "0.13.1", features = ["ecdsa", "pkcs8", "pem"] }
-x509-parser = "0.18.1"
 serde_json.workspace = true
-uselesskey = { path = "../uselesskey", default-features = false, features = [] }
-uselesskey-core = { path = "../uselesskey-core" }
-
-[features]
-default = ["uk-default"]
-uk-default = ["uselesskey/default"]
-uk-all = ["uselesskey/full"]
-uk-rsa = ["uselesskey/rsa"]
-uk-ecdsa = ["uselesskey/ecdsa"]
-uk-ed25519 = ["uselesskey/ed25519"]
-uk-hmac = ["uselesskey/hmac"]
-uk-x509 = ["uselesskey/x509"]
-uk-jwk = ["uselesskey/jwk"]
+uselesskey = { path = "../uselesskey", features = ["jwk"] } # enable jwk in BDD for coverage
+uselesskey-core = { path = "../uselesskey-core" } # for TempArtifact
 
 [[test]]
 name = "bdd"
