Enhance documentation and features for `uselesskey`
- Updated CLAUDE.md to clarify the problem with secret scanners and added context on ecosystem gaps.
- Modified Cargo.lock to include `serde_json` and `uselesskey-core` dependencies.
- Revised README.md to improve clarity on outputs and added context on secret incidents.
- Expanded BDD tests in rsa.feature to cover additional scenarios for deterministic and random RSA key generation.
- Updated bdd.rs to support new scenarios and added handling for corrupted PEM and truncated DER.
- Introduced new features for JWK generation and negative fixtures with corresponding feature files.
- Added migration guide to assist users in transitioning from committed key fixtures to runtime generation.

--- a/crates/uselesskey-bdd/Cargo.toml
+++ b/crates/uselesskey-bdd/Cargo.toml
@@ -10,7 +10,9 @@ rust-version.workspace = true
 cucumber.workspace = true
 tokio.workspace = true
 rsa.workspace = true
+serde_json.workspace = true
 uselesskey = { path = "../uselesskey", features = ["jwk"] } # enable jwk in BDD for coverage
+uselesskey-core = { path = "../uselesskey-core" } # for TempArtifact
 
 [[test]]
 name = "bdd"
