--- a/crates/uselesskey-ecdsa/Cargo.toml
+++ b/crates/uselesskey-ecdsa/Cargo.toml
@@ -1,18 +1,14 @@
 [package]
 name = "uselesskey-ecdsa"
-version = "0.2.0"
+version = "0.1.0"
+publish = false
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "ECDSA key fixtures for uselesskey."
-categories = ["development-tools::testing"]
-keywords = ["ecdsa", "fixtures", "testing", "jwk"]
-readme = "../../README.md"
-authors.workspace = true
 
 [dependencies]
-uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
+uselesskey-core = { path = "../uselesskey-core", version = "0.1.0" }
 
 # Elliptic curve support from RustCrypto
 p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
@@ -21,14 +17,14 @@ elliptic-curve = { version = "0.13", features = ["pkcs8", "pem", "sec1"] }
 rand_core.workspace = true
 
 # Optional JWK/JWKS support
+serde = { workspace = true, optional = true }
 serde_json = { workspace = true, optional = true }
 base64 = { workspace = true, optional = true }
-uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.2.0", optional = true }
 blake3.workspace = true
 
 [features]
 default = []
-jwk = ["dep:serde_json", "dep:base64", "dep:uselesskey-jwk"]
+jwk = ["dep:serde", "dep:serde_json", "dep:base64"]
 
 [dev-dependencies]
 proptest.workspace = true
