Add Ed25519 and X.509 certificate generation fixtures
- Implemented Ed25519 keypair generation with PKCS#8 support in the `uselesskey-ed25519` crate.
- Added specifications for Ed25519 keys, including stable encoding for deterministic derivation.
- Introduced X.509 certificate generation in the `uselesskey-x509` crate, supporting self-signed certificates and various key usages.
- Implemented negative testing fixtures for X.509 certificates, allowing for the generation of intentionally invalid certificates for error handling.
- Updated documentation for usage examples and negative fixture generation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ members = [
   "crates/uselesskey",
   "crates/uselesskey-core",
   "crates/uselesskey-rsa",
+  "crates/uselesskey-ecdsa",
+  "crates/uselesskey-ed25519",
+  "crates/uselesskey-x509",
   "crates/uselesskey-bdd",
   "xtask",
 ]
@@ -48,6 +51,10 @@ tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 
 # RSA
 rsa = { version = "0.9", features = ["pem"] }
+
+# Ed25519
+ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }
+pkcs8 = { version = "0.10", features = ["pem"] }
 
 # optional JWK helpers
 serde = { version = "1", features = ["derive"] }
