--- a/crates/uselesskey-x509/Cargo.toml
+++ b/crates/uselesskey-x509/Cargo.toml
@@ -1,33 +1,22 @@
 [package]
 name = "uselesskey-x509"
-version = "0.2.0"
+version = "0.1.0"
+publish = false
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
 description = "X.509 certificate fixtures for testing"
-categories = ["development-tools::testing"]
-keywords = ["x509", "fixtures", "testing"]
-readme = "../../README.md"
-authors.workspace = true
 
 [dependencies]
-uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
-uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.2.0" }
-uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.2.0", optional = true }
+uselesskey-core = { path = "../uselesskey-core", version = "0.1.0" }
+uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.1.0" }
 rcgen = "0.13"
 rustls-pki-types = "1"
 x509-parser = "0.16"
 time = "0.3"
 blake3.workspace = true
-rand_core.workspace = true
-rsa.workspace = true
-base64.workspace = true
-
-[features]
-jwk = ["dep:uselesskey-jwk", "uselesskey-rsa/jwk"]
 
 [dev-dependencies]
 proptest.workspace = true
 rstest.workspace = true
-rand_chacha.workspace = true
