--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -9,3 +9,5 @@ rust-version.workspace = true
 [dependencies]
 anyhow.workspace = true
 clap.workspace = true
+serde = { workspace = true, features = ["derive"] }
+serde_json.workspace = true
