feat: add feature matrix checks and publish dry-run command
- Introduced new commands: `FeatureMatrix`, `NoBlob`, and `PublishCheck` in the xtask CLI.
- Implemented `ci` function to run common CI tasks including feature matrix checks.
- Added `run_feature_matrix` function to validate various feature combinations.
- Created `publish_check` function to perform dry-run publishes for crates in dependency order.
- Added HMAC secret fixture generation with tests for JWK and JWKS.
- Implemented new crates: `uselesskey-hmac` and `uselesskey-jwk` for HMAC and JWK handling.
- Updated documentation for release and requirements to reflect new features and commands.

--- a/crates/uselesskey-bdd/Cargo.toml
+++ b/crates/uselesskey-bdd/Cargo.toml
@@ -15,7 +15,7 @@ p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
 p384 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
 x509-parser = "0.16"
 serde_json.workspace = true
-uselesskey = { path = "../uselesskey", features = ["jwk", "ed25519", "ecdsa", "x509"] }
+uselesskey = { path = "../uselesskey", features = ["jwk", "ed25519", "ecdsa", "x509", "hmac"] }
 uselesskey-core = { path = "../uselesskey-core" } # for TempArtifact
 
 [[test]]
