--- a/crates/uselesskey-ed25519/Cargo.toml
+++ b/crates/uselesskey-ed25519/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
 name = "uselesskey-ed25519"
 version = "0.1.0"
-publish = false
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
+description = "Ed25519 key fixtures for uselesskey."
+categories = ["development-tools::testing"]
+keywords = ["ed25519", "fixtures", "testing", "jwk"]
+readme = "../../README.md"
+authors.workspace = true
 
 [dependencies]
 uselesskey-core = { path = "../uselesskey-core", version = "0.1.0" }
@@ -14,14 +18,14 @@ pkcs8.workspace = true
 rand_core.workspace = true
 
 # Optional JWK/JWKS support
-serde = { workspace = true, optional = true }
 serde_json = { workspace = true, optional = true }
 base64 = { workspace = true, optional = true }
+uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.1.0", optional = true }
 blake3.workspace = true
 
 [features]
 default = []
-jwk = ["dep:serde", "dep:serde_json", "dep:base64"]
+jwk = ["dep:serde_json", "dep:base64", "dep:uselesskey-jwk"]
 
 [dev-dependencies]
 proptest.workspace = true
