feat: add feature matrix checks and publish dry-run command
- Introduced new commands: `FeatureMatrix`, `NoBlob`, and `PublishCheck` in the xtask CLI.
- Implemented `ci` function to run common CI tasks including feature matrix checks.
- Added `run_feature_matrix` function to validate various feature combinations.
- Created `publish_check` function to perform dry-run publishes for crates in dependency order.
- Added HMAC secret fixture generation with tests for JWK and JWKS.
- Implemented new crates: `uselesskey-hmac` and `uselesskey-jwk` for HMAC and JWK handling.
- Updated documentation for release and requirements to reflect new features and commands.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,11 @@ resolver = "2"
 members = [
   "crates/uselesskey",
   "crates/uselesskey-core",
+  "crates/uselesskey-jwk",
   "crates/uselesskey-rsa",
   "crates/uselesskey-ecdsa",
   "crates/uselesskey-ed25519",
+  "crates/uselesskey-hmac",
   "crates/uselesskey-x509",
   "crates/uselesskey-bdd",
   "xtask",
