--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,11 @@ jobs:
 
       - name: xtask pr
         run: cargo xtask pr
+      - name: Upload receipt
+        uses: actions/upload-artifact@v4
+        with:
+          name: receipt-pr
+          path: target/xtask/receipt.json
 
   main:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -47,8 +52,22 @@ jobs:
         with:
           components: rustfmt, clippy
 
+      - uses: dtolnay/rust-toolchain@nightly
+
       - name: Cache cargo
         uses: Swatinem/rust-cache@v2
 
+      - name: Install cargo-fuzz
+        run: cargo install cargo-fuzz
+
+      - name: Install cargo-mutants
+        run: cargo install cargo-mutants
+
       - name: xtask ci
         run: cargo xtask ci
+
+      - name: Upload receipt
+        uses: actions/upload-artifact@v4
+        with:
+          name: receipt-main
+          path: target/xtask/receipt.json
