--- a/crates/uselesskey-hmac/Cargo.toml
+++ b/crates/uselesskey-hmac/Cargo.toml
@@ -1,30 +1,25 @@
 [package]
-name = "uselesskey-rsa"
+name = "uselesskey-hmac"
 version = "0.1.0"
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "RSA key fixtures for uselesskey."
+description = "HMAC secret fixtures for testing"
 categories = ["development-tools::testing"]
-keywords = ["rsa", "fixtures", "testing", "jwk"]
-readme = "../../README.md"
+keywords = ["hmac", "fixtures", "testing", "jwk"]
+readme = "README.md"
 authors.workspace = true
 
 [dependencies]
 uselesskey-core = { path = "../uselesskey-core", version = "0.1.0" }
-rsa.workspace = true
+blake3.workspace = true
+rand_core.workspace = true
 
 # Optional JWK/JWKS support
-serde_json = { workspace = true, optional = true }
-base64 = { workspace = true, optional = true }
 uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.1.0", optional = true }
-blake3.workspace = true
+base64 = { workspace = true, optional = true }
 
 [features]
 default = []
-jwk = ["dep:serde_json", "dep:base64", "dep:uselesskey-jwk"]
-
-[dev-dependencies]
-proptest.workspace = true
-rstest.workspace = true
+jwk = ["dep:uselesskey-jwk", "dep:base64"]
