--- a/crates/uselesskey/Cargo.toml
+++ b/crates/uselesskey/Cargo.toml
@@ -12,13 +12,18 @@ readme = "../../README.md"
 documentation = "https://docs.rs/uselesskey"
 authors.workspace = true
 
+[package.metadata.docs.rs]
+features = ["full"]
+
 [dependencies]
 uselesskey-core = { path = "../uselesskey-core", version = "0.1.0" }
 
 # Key type crates - all optional
+uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.1.0", optional = true }
 uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.1.0", optional = true }
 uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.1.0", optional = true }
 uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.1.0", optional = true }
+uselesskey-hmac = { path = "../uselesskey-hmac", version = "0.1.0", optional = true }
 uselesskey-x509 = { path = "../uselesskey-x509", version = "0.1.0", optional = true }
 
 [features]
@@ -28,17 +33,20 @@ default = ["rsa"]
 rsa = ["dep:uselesskey-rsa"]
 ecdsa = ["dep:uselesskey-ecdsa"]
 ed25519 = ["dep:uselesskey-ed25519"]
+hmac = ["dep:uselesskey-hmac"]
 
 # X.509 certificates (implies rsa for now)
 x509 = ["dep:uselesskey-x509", "rsa"]
 
 # Output formats (pass-through to enabled key crates)
 jwk = [
+    "dep:uselesskey-jwk",
     "uselesskey-rsa?/jwk",
     "uselesskey-ecdsa?/jwk",
     "uselesskey-ed25519?/jwk",
+    "uselesskey-hmac?/jwk",
 ]
 
 # Convenience bundles
-all-keys = ["rsa", "ecdsa", "ed25519"]
+all-keys = ["rsa", "ecdsa", "ed25519", "hmac"]
 full = ["all-keys", "x509", "jwk"]
