--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
   "crates/uselesskey-rsa",
   "crates/uselesskey-ecdsa",
   "crates/uselesskey-ed25519",
+  "crates/uselesskey-hmac",
   "crates/uselesskey-x509",
   "crates/uselesskey-bdd",
   "xtask",
