Add uselesskey-jsonwebtoken crate for JWT integration and examples
- Introduced a new crate `uselesskey-jsonwebtoken` for integrating JWT functionality with uselesskey test fixtures.
- Implemented extension traits for encoding and decoding JWTs using RSA, ECDSA, Ed25519, and HMAC keys.
- Added examples demonstrating signing and verifying JWTs with different key types.
- Updated README to reflect the new crate and its usage.
- Enhanced existing examples to showcase JWK/JWKS generation and tempfile handling for key fixtures.
- Added `uselesskey-jsonwebtoken` as a member in the workspace and included necessary dependencies.

--- a/crates/uselesskey/Cargo.toml
+++ b/crates/uselesskey/Cargo.toml
@@ -50,3 +50,6 @@ jwk = [
 # Convenience bundles
 all-keys = ["rsa", "ecdsa", "ed25519", "hmac"]
 full = ["all-keys", "x509", "jwk"]
+
+[dev-dependencies]
+tempfile.workspace = true
