--- a/crates/uselesskey-jsonwebtoken/Cargo.toml
+++ b/crates/uselesskey-jsonwebtoken/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uselesskey-jsonwebtoken"
-version = "0.2.0"
+version = "0.1.0"
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
@@ -8,7 +8,7 @@ repository.workspace = true
 description = "jsonwebtoken integration for uselesskey test fixtures."
 categories = ["development-tools::testing"]
 keywords = ["jwt", "jsonwebtoken", "fixtures", "testing"]
-readme = "README.md"
+readme = "../../README.md"
 authors.workspace = true
 
 [dependencies]
@@ -17,10 +17,10 @@ authors.workspace = true
 jsonwebtoken = { version = "10", features = ["use_pem"] }
 
 # Key type crates (all optional)
-uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.2.0", optional = true }
-uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.2.0", optional = true }
-uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.2.0", optional = true }
-uselesskey-hmac = { path = "../uselesskey-hmac", version = "0.2.0", optional = true }
+uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.1.0", optional = true }
+uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.1.0", optional = true }
+uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.1.0", optional = true }
+uselesskey-hmac = { path = "../uselesskey-hmac", version = "0.1.0", optional = true }
 
 [features]
 default = []
@@ -31,7 +31,7 @@ hmac = ["dep:uselesskey-hmac"]
 all = ["rsa", "ecdsa", "ed25519", "hmac"]
 
 [dev-dependencies]
-uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
+uselesskey-core = { path = "../uselesskey-core", version = "0.1.0" }
 serde.workspace = true
 
 # Enable rust_crypto for tests
