Add uselesskey-jsonwebtoken crate for JWT integration and examples
- Introduced a new crate `uselesskey-jsonwebtoken` for integrating JWT functionality with uselesskey test fixtures.
- Implemented extension traits for encoding and decoding JWTs using RSA, ECDSA, Ed25519, and HMAC keys.
- Added examples demonstrating signing and verifying JWTs with different key types.
- Updated README to reflect the new crate and its usage.
- Enhanced existing examples to showcase JWK/JWKS generation and tempfile handling for key fixtures.
- Added `uselesskey-jsonwebtoken` as a member in the workspace and included necessary dependencies.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
   "crates/uselesskey-ed25519",
   "crates/uselesskey-hmac",
   "crates/uselesskey-x509",
+  "crates/uselesskey-jsonwebtoken",
   "crates/uselesskey-bdd",
   "xtask",
 ]
