--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,53 +16,53 @@ members = [
 exclude = ["fuzz"]
 
 [workspace.package]
-edition = "2021"
+edition = "2024"
 license = "MIT OR Apache-2.0"
-rust-version = "1.88"
+rust-version = "1.92"
 repository = "https://github.com/EffortlessMetrics/uselesskey"
 authors = ["Effortless Metrics <opensource@effortlessmetrics.com>"]
 
 [workspace.dependencies]
 # error handling
-thiserror = "1"
+thiserror = "2.0.18"
 
 # determinism / hashing
-blake3 = "1"
+blake3 = "1.8.3"
 
 # concurrency-friendly cache
-dashmap = "5"
+dashmap = "6.1.0"
 
-# RNG
+# RNG — pinned to 0.8/0.6/0.3: rsa 0.9 and ed25519-dalek 2 require rand_core 0.6
 rand = "0.8"
 rand_core = "0.6"
 rand_chacha = "0.3"
 
 # sinks
-tempfile = "3"
+tempfile = "3.24.0"
 
 # testing
-proptest = "1"
-rstest = "0.21"
+proptest = "1.10.0"
+rstest = "0.26.1"
 
 # CLI helpers (xtask)
-anyhow = "1"
-clap = { version = "4", features = ["derive"] }
+anyhow = "1.0.101"
+clap = { version = "4.5.57", features = ["derive"] }
 
 # BDD
-cucumber = { version = "0.22", features = ["macros"] }
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+cucumber = { version = "0.22.1", features = ["macros"] }
+tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
 
 # RSA
-rsa = { version = "0.9", features = ["pem"] }
+rsa = { version = "0.9.10", features = ["pem"] }
 
 # Ed25519
-ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }
-pkcs8 = { version = "0.10", features = ["pem"] }
+ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "pem", "rand_core"] }
+pkcs8 = { version = "0.10.2", features = ["pem"] }
 
 # optional JWK helpers
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-base64 = "0.21"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
+base64 = "0.22.1"
 
 [profile.dev]
 # RSA keygen can be slow in debug; modest opt helps without full release build.
