--- a/crates/uselesskey-rustls/Cargo.toml
+++ b/crates/uselesskey-rustls/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uselesskey-rustls"
-version = "0.2.0"
+version = "0.1.0"
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
@@ -8,18 +8,17 @@ repository.workspace = true
 description = "rustls-pki-types integration for uselesskey test fixtures."
 categories = ["development-tools::testing"]
 keywords = ["rustls", "tls", "fixtures", "testing"]
-readme = "README.md"
+readme = "../../README.md"
 authors.workspace = true
 
 [dependencies]
 rustls-pki-types = "1"
-rustls = { version = "0.23", default-features = false, features = ["std", "tls12"], optional = true }
 
 # Key type crates (all optional)
-uselesskey-x509 = { path = "../uselesskey-x509", version = "0.2.0", optional = true }
-uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.2.0", optional = true }
-uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.2.0", optional = true }
-uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.2.0", optional = true }
+uselesskey-x509 = { path = "../uselesskey-x509", version = "0.1.0", optional = true }
+uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.1.0", optional = true }
+uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.1.0", optional = true }
+uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.1.0", optional = true }
 
 [features]
 default = ["x509"]
@@ -28,13 +27,6 @@ rsa = ["dep:uselesskey-rsa"]
 ecdsa = ["dep:uselesskey-ecdsa"]
 ed25519 = ["dep:uselesskey-ed25519"]
 all = ["x509", "rsa", "ecdsa", "ed25519"]
-server-config = ["dep:rustls", "x509"]
-client-config = ["dep:rustls", "x509"]
-tls-config = ["server-config", "client-config"]
-rustls-ring = ["rustls?/ring"]
-rustls-aws-lc-rs = ["rustls?/aws_lc_rs"]
 
 [dev-dependencies]
-uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
-uselesskey-x509 = { path = "../uselesskey-x509", version = "0.2.0" }
-rustls = { version = "0.23", features = ["ring"] }
+uselesskey-core = { path = "../uselesskey-core", version = "0.1.0" }
