Implement X.509 certificate chain generation and negative testing fixtures
- Added `X509Chain` struct for generating a three-level X.509 certificate chain (root CA, intermediate CA, leaf).
- Introduced `ChainSpec` struct to define specifications for certificate generation, including common names, validity periods, and RSA key sizes.
- Created utility functions for deterministic base time and serial number generation.
- Implemented negative testing scenarios for certificate chains, including hostname mismatches, unknown CAs, and expired certificates.
- Added comprehensive tests for chain generation, PEM formatting, determinism, and negative cases.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
   "crates/uselesskey-hmac",
   "crates/uselesskey-x509",
   "crates/uselesskey-jsonwebtoken",
+  "crates/uselesskey-rustls",
   "crates/uselesskey-bdd",
   "xtask",
 ]
@@ -33,9 +34,9 @@ blake3 = "1.8.3"
 dashmap = "6.1.0"
 
 # RNG — pinned to 0.8/0.6/0.3: rsa 0.9 and ed25519-dalek 2 require rand_core 0.6
-rand = "0.8"
-rand_core = "0.6"
-rand_chacha = "0.3"
+rand = "0.9.2"
+rand_core = "0.10.0"
+rand_chacha = "0.10.0"
 
 # sinks
 tempfile = "3.24.0"
