--- a/crates/uselesskey-rustls/Cargo.toml
+++ b/crates/uselesskey-rustls/Cargo.toml
@@ -13,6 +13,7 @@ authors.workspace = true
 
 [dependencies]
 rustls-pki-types = "1"
+rustls = { version = "0.23", default-features = false, features = ["std", "tls12"], optional = true }
 
 # Key type crates (all optional)
 uselesskey-x509 = { path = "../uselesskey-x509", version = "0.1.0", optional = true }
@@ -27,6 +28,13 @@ rsa = ["dep:uselesskey-rsa"]
 ecdsa = ["dep:uselesskey-ecdsa"]
 ed25519 = ["dep:uselesskey-ed25519"]
 all = ["x509", "rsa", "ecdsa", "ed25519"]
+server-config = ["dep:rustls", "x509"]
+client-config = ["dep:rustls", "x509"]
+tls-config = ["server-config", "client-config"]
+rustls-ring = ["rustls?/ring"]
+rustls-aws-lc-rs = ["rustls?/aws_lc_rs"]
 
 [dev-dependencies]
 uselesskey-core = { path = "../uselesskey-core", version = "0.1.0" }
+uselesskey-x509 = { path = "../uselesskey-x509", version = "0.1.0" }
+rustls = { version = "0.23", features = ["ring"] }
