Add tests and documentation for uselesskey integration with various cryptographic libraries
- Implement tests for deterministic factory creation and environment variable handling in `uselesskey-core`.
- Add comprehensive tests for ECDSA keypair generation and validation in `uselesskey-ecdsa`.
- Introduce tests for Ed25519 keypair functionality in `uselesskey-ed25519`.
- Create README files for `uselesskey-jsonwebtoken`, `uselesskey-ring`, `uselesskey-rustcrypto`, and `uselesskey-rustls` with usage examples and feature descriptions.
- Implement RustCrypto integration for keypair conversion in `uselesskey-rustcrypto`.
- Add tests for HMAC functionality in `uselesskey-hmac`.
- Ensure facade tests validate core items and re-export functionality across different key types.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ members = [
   "crates/uselesskey-jsonwebtoken",
   "crates/uselesskey-rustls",
   "crates/uselesskey-ring",
+  "crates/uselesskey-rustcrypto",
+  "crates/uselesskey-aws-lc-rs",
   "crates/uselesskey-bdd",
   "tests",
   "xtask",
