--- a/crates/uselesskey-jsonwebtoken/Cargo.toml
+++ b/crates/uselesskey-jsonwebtoken/Cargo.toml
@@ -8,7 +8,7 @@ repository.workspace = true
 description = "jsonwebtoken integration for uselesskey test fixtures."
 categories = ["development-tools::testing"]
 keywords = ["jwt", "jsonwebtoken", "fixtures", "testing"]
-readme = "../../README.md"
+readme = "README.md"
 authors.workspace = true
 
 [dependencies]
