--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -11,3 +11,6 @@ anyhow.workspace = true
 clap.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
+
+[dev-dependencies]
+tempfile.workspace = true
