--- a/crates/uselesskey-rustcrypto/Cargo.toml
+++ b/crates/uselesskey-rustcrypto/Cargo.toml
@@ -1,20 +1,23 @@
 [package]
-name = "uselesskey-jsonwebtoken"
+name = "uselesskey-rustcrypto"
 version = "0.1.0"
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "jsonwebtoken integration for uselesskey test fixtures."
+description = "RustCrypto integration for uselesskey test fixtures."
 categories = ["development-tools::testing"]
-keywords = ["jwt", "jsonwebtoken", "fixtures", "testing"]
+keywords = ["rustcrypto", "fixtures", "testing", "crypto"]
 readme = "README.md"
 authors.workspace = true
 
 [dependencies]
-# Note: We don't enable rust_crypto by default - consumers should choose their preferred
-# crypto provider (rust_crypto or aws_lc_rs). Tests use rust_crypto.
-jsonwebtoken = { version = "10", features = ["use_pem"] }
+rsa = { workspace = true, optional = true }
+p256 = { version = "0.13", features = ["ecdsa", "pkcs8"], optional = true }
+p384 = { version = "0.13", features = ["ecdsa", "pkcs8"], optional = true }
+ed25519-dalek = { workspace = true, optional = true }
+hmac = { version = "0.12", optional = true }
+sha2 = { version = "0.10", optional = true }
 
 # Key type crates (all optional)
 uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.1.0", optional = true }
@@ -24,17 +27,13 @@ uselesskey-hmac = { path = "../uselesskey-hmac", version = "0.1.0", optional = t
 
 [features]
 default = []
-rsa = ["dep:uselesskey-rsa"]
-ecdsa = ["dep:uselesskey-ecdsa"]
-ed25519 = ["dep:uselesskey-ed25519"]
-hmac = ["dep:uselesskey-hmac"]
+rsa = ["dep:rsa", "dep:uselesskey-rsa"]
+ecdsa = ["dep:p256", "dep:p384", "dep:uselesskey-ecdsa"]
+ed25519 = ["dep:ed25519-dalek", "dep:uselesskey-ed25519"]
+hmac = ["dep:hmac", "dep:sha2", "dep:uselesskey-hmac"]
 all = ["rsa", "ecdsa", "ed25519", "hmac"]
 
 [dev-dependencies]
 uselesskey-core = { path = "../uselesskey-core", version = "0.1.0" }
-serde.workspace = true
-
-# Enable rust_crypto for tests
-[dev-dependencies.jsonwebtoken]
-version = "10"
-features = ["use_pem", "rust_crypto"]
+sha2 = "0.10"
+rsa = { workspace = true }
