--- a/deny.toml
+++ b/deny.toml
@@ -13,7 +13,7 @@ wildcards = "deny"
 skip = []
 
 [licenses]
-allow = ["MIT", "Apache-2.0", "BSD-3-Clause", "ISC", "CC0-1.0"]
+allow = ["MIT", "Apache-2.0", "BSD-3-Clause", "ISC", "CC0-1.0", "OpenSSL"]
 confidence-threshold = 0.8
 
 [sources]
