Add integration tests for JWT and TLS functionality
- Implement JWT integration tests covering signing/verification flows for RSA, ECDSA, Ed25519, and HMAC algorithms.
- Include tests for JWT with JWKS for key lookup and cross-crate compatibility.
- Add test utilities for deterministic key generation.
- Create TLS integration tests for server/client configuration, mTLS scenarios, and cross-key type compatibility.
- Ensure tests cover various key sizes and certificate chain structures.
- Validate determinism in key and chain generation across different labels.

--- a/crates/uselesskey-bdd/Cargo.toml
+++ b/crates/uselesskey-bdd/Cargo.toml
@@ -15,8 +15,19 @@ p256 = { version = "0.13.2", features = ["ecdsa", "pkcs8", "pem"] }
 p384 = { version = "0.13.1", features = ["ecdsa", "pkcs8", "pem"] }
 x509-parser = "0.18.1"
 serde_json.workspace = true
-uselesskey = { path = "../uselesskey", features = ["jwk", "ed25519", "ecdsa", "x509", "hmac"] }
-uselesskey-core = { path = "../uselesskey-core" } # for TempArtifact
+uselesskey = { path = "../uselesskey", default-features = false, features = [] }
+uselesskey-core = { path = "../uselesskey-core" }
+
+[features]
+default = ["uk-default"]
+uk-default = ["uselesskey/default"]
+uk-all = ["uselesskey/full"]
+uk-rsa = ["uselesskey/rsa"]
+uk-ecdsa = ["uselesskey/ecdsa"]
+uk-ed25519 = ["uselesskey/ed25519"]
+uk-hmac = ["uselesskey/hmac"]
+uk-x509 = ["uselesskey/x509"]
+uk-jwk = ["uselesskey/jwk"]
 
 [[test]]
 name = "bdd"
