--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members = [
   "crates/uselesskey-rustcrypto",
   "crates/uselesskey-aws-lc-rs",
   "crates/uselesskey-bdd",
+  "tests",
   "xtask",
 ]
 exclude = ["fuzz"]
@@ -67,6 +68,17 @@ pkcs8 = { version = "0.10.2", features = ["pem"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 base64 = "0.22.1"
+
+# JWT
+jsonwebtoken = { version = "10", features = ["use_pem", "rust_crypto"] }
+
+# TLS
+rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
+rustls-pki-types = "1"
+
+# Crypto backends
+aws-lc-rs = { version = "1", default-features = false, features = ["alloc", "non-fips"] }
+ring = { version = "0.17", default-features = false, features = ["std"] }
 
 [profile.dev]
 # RSA keygen can be slow in debug; opt-level 2 keeps BDD/RSA tests from looking hung.
