--- a/crates/uselesskey-ring/Cargo.toml
+++ b/crates/uselesskey-ring/Cargo.toml
@@ -28,3 +28,4 @@ all = ["rsa", "ecdsa", "ed25519"]
 
 [dev-dependencies]
 uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
+hex = "0.4"
