--- a/crates/uselesskey-x509/Cargo.toml
+++ b/crates/uselesskey-x509/Cargo.toml
@@ -14,12 +14,18 @@ authors.workspace = true
 [dependencies]
 uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
 uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.2.0" }
+uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.2.0", optional = true }
 rcgen = "0.13"
 rustls-pki-types = "1"
 x509-parser = "0.16"
 time = "0.3"
 blake3.workspace = true
 rand_core.workspace = true
+rsa.workspace = true
+base64.workspace = true
+
+[features]
+jwk = ["dep:uselesskey-jwk", "uselesskey-rsa/jwk"]
 
 [dev-dependencies]
 proptest.workspace = true
