docs: release prep for 0.2.0 — fix docs, add metadata, create READMEs
- Fix broken aws-lc-rs example in root README (wrong trait/method names)
- Fix `native (default)` claim in aws-lc-rs README and lib.rs doc comments
- Add [package.metadata.docs.rs] to 10 crates for docs.rs feature coverage
- Create dedicated READMEs for core, rsa, ecdsa, ed25519, x509 crates
- Update Cargo.toml readme paths from root to per-crate READMEs
- Merge CHANGELOG [Unreleased] into [0.2.0] with today's date
- Add NASM install step to CI for aws-lc-rs coverage
- Include in-progress aws-lc-rs build.rs and test updates

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,9 @@ jobs:
 
       - uses: dtolnay/rust-toolchain@nightly
 
+      - name: Install NASM (for aws-lc-rs)
+        run: sudo apt-get update && sudo apt-get install -y nasm
+
       - name: Cache cargo
         uses: Swatinem/rust-cache@v2
 
@@ -55,6 +58,9 @@ jobs:
           components: rustfmt, clippy
 
       - uses: dtolnay/rust-toolchain@nightly
+
+      - name: Install NASM (for aws-lc-rs)
+        run: sudo apt-get update && sudo apt-get install -y nasm
 
       - name: Cache cargo
         uses: Swatinem/rust-cache@v2
