--- a/crates/uselesskey-jsonwebtoken/Cargo.toml
+++ b/crates/uselesskey-jsonwebtoken/Cargo.toml
@@ -22,6 +22,9 @@ uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.2.0", optional =
 uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.2.0", optional = true }
 uselesskey-hmac = { path = "../uselesskey-hmac", version = "0.2.0", optional = true }
 
+[package.metadata.docs.rs]
+features = ["all"]
+
 [features]
 default = []
 rsa = ["dep:uselesskey-rsa"]
