--- a/crates/uselesskey-ring/Cargo.toml
+++ b/crates/uselesskey-ring/Cargo.toml
@@ -19,6 +19,9 @@ uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.2.0", optional = tru
 uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.2.0", optional = true }
 uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.2.0", optional = true }
 
+[package.metadata.docs.rs]
+features = ["all"]
+
 [features]
 default = []
 rsa = ["dep:uselesskey-rsa"]
