--- a/crates/uselesskey-x509/Cargo.toml
+++ b/crates/uselesskey-x509/Cargo.toml
@@ -8,7 +8,7 @@ repository.workspace = true
 description = "X.509 certificate fixtures for testing"
 categories = ["development-tools::testing"]
 keywords = ["x509", "fixtures", "testing"]
-readme = "../../README.md"
+readme = "README.md"
 authors.workspace = true
 
 [dependencies]
@@ -23,6 +23,9 @@ blake3.workspace = true
 rand_core.workspace = true
 rsa.workspace = true
 base64.workspace = true
+
+[package.metadata.docs.rs]
+features = ["jwk"]
 
 [features]
 jwk = ["dep:uselesskey-jwk", "uselesskey-rsa/jwk"]
