fix: address PR review blockers (feature-matrix trigger, BDD compilation, SAN step)
P0: Fix plan.rs feature-matrix trigger — the condition required both
crates/uselesskey/ AND .feature files, but .feature files live under
crates/uselesskey-bdd/. Changed to OR logic so facade changes or BDD
feature file changes each independently trigger feature-matrix.

P0: Fix BDD default compilation — bdd.rs imports ECDSA/Ed25519/HMAC/
X509/JWK unconditionally, but uselesskey-bdd defaults only enable
uselesskey/default (rsa). Make xtask bdd pass --features uk-all.

P1: Fix SAN step in BDD — add_san_to_cert collected SANs in world
state but never applied them to X509Spec. Added sans field to X509Spec
with with_sans() builder, stable_bytes() encoding (bumped version to 3),
and SAN injection in cert.rs generation. BDD step now passes accumulated
SANs to the spec when regenerating.

Also: remove native feature from aws-lc-rs docs.rs metadata (docs.rs
won't install NASM), use rustdoc-args ["--cfg", "docsrs"] instead.

--- a/crates/uselesskey-aws-lc-rs/Cargo.toml
+++ b/crates/uselesskey-aws-lc-rs/Cargo.toml
@@ -20,8 +20,8 @@ uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.2.0", optional =
 uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.2.0", optional = true }
 
 [package.metadata.docs.rs]
-features = ["native", "all"]
-rustdoc-args = ["--cfg", "has_nasm"]
+features = ["all"]
+rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
 # Note: The "native" feature is not enabled by default because aws-lc-rs requires NASM on Windows.
