feat: add comprehensive test coverage, per-crate READMEs, and X.509 SAN support (#3)
* feat: add CLAUDE.md for project guidance and build commands

* feat: enhance documentation with strategic positioning, ecosystem gaps, and roadmap updates

* Refactor code structure for improved readability and maintainability

* Enhance documentation and features for `uselesskey`

- Updated CLAUDE.md to clarify the problem with secret scanners and added context on ecosystem gaps.
- Modified Cargo.lock to include `serde_json` and `uselesskey-core` dependencies.
- Revised README.md to improve clarity on outputs and added context on secret incidents.
- Expanded BDD tests in rsa.feature to cover additional scenarios for deterministic and random RSA key generation.
- Updated bdd.rs to support new scenarios and added handling for corrupted PEM and truncated DER.
- Introduced new features for JWK generation and negative fixtures with corresponding feature files.
- Added migration guide to assist users in transitioning from committed key fixtures to runtime generation.

* Add Ed25519 and X.509 certificate generation fixtures

- Implemented Ed25519 keypair generation with PKCS#8 support in the `uselesskey-ed25519` crate.
- Added specifications for Ed25519 keys, including stable encoding for deterministic derivation.
- Introduced X.509 certificate generation in the `uselesskey-x509` crate, supporting self-signed certificates and various key usages.
- Implemented negative testing fixtures for X.509 certificates, allowing for the generation of intentionally invalid certificates for error handling.
- Updated documentation for usage examples and negative fixture generation.

* feat: implement PR-scoped testing with cargo xtask and enhance CI workflow

* feat: add feature matrix checks and publish dry-run command

- Introduced new commands: `FeatureMatrix`, `NoBlob`, and `PublishCheck` in the xtask CLI.
- Implemented `ci` function to run common CI tasks including feature matrix checks.
- Added 

--- a/crates/uselesskey-aws-lc-rs/Cargo.toml
+++ b/crates/uselesskey-aws-lc-rs/Cargo.toml
@@ -19,8 +19,15 @@ uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.2.0", optional = tru
 uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.2.0", optional = true }
 uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.2.0", optional = true }
 
+[package.metadata.docs.rs]
+features = ["all"]
+rustdoc-args = ["--cfg", "docsrs"]
+
 [features]
-default = ["native"]
+# Note: The "native" feature is not enabled by default because aws-lc-rs requires NASM on Windows.
+# To use aws-lc-rs integration, enable the "native" feature explicitly.
+# CI environments should install NASM before running tests with this feature.
+default = []
 native = ["dep:aws-lc-rs"]
 rsa = ["dep:uselesskey-rsa"]
 ecdsa = ["dep:uselesskey-ecdsa"]
