--- a/crates/uselesskey-hmac/Cargo.toml
+++ b/crates/uselesskey-hmac/Cargo.toml
@@ -20,6 +20,13 @@ rand_core.workspace = true
 uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.2.0", optional = true }
 base64 = { workspace = true, optional = true }
 
+[package.metadata.docs.rs]
+features = ["jwk"]
+
+[dev-dependencies]
+uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
+base64 = { workspace = true }
+
 [features]
 default = []
 jwk = ["dep:uselesskey-jwk", "dep:base64"]
