--- a/crates/uselesskey-aws-lc-rs/Cargo.toml
+++ b/crates/uselesskey-aws-lc-rs/Cargo.toml
@@ -32,7 +32,7 @@ native = ["dep:aws-lc-rs"]
 rsa = ["dep:uselesskey-rsa"]
 ecdsa = ["dep:uselesskey-ecdsa"]
 ed25519 = ["dep:uselesskey-ed25519"]
-all = ["rsa", "ecdsa", "ed25519"]
+all = ["native", "rsa", "ecdsa", "ed25519"]
 
 [dev-dependencies]
 uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
