feat: enhance rustls provider installation and update test configurations

--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -79,6 +79,7 @@ e2e = [
     "dep:uselesskey-jsonwebtoken",
     "dep:uselesskey-rustls",
     "dep:jsonwebtoken",
+    "dep:rustls",
 ]
 
 # Key rotation workflow tests
