--- a/crates/uselesskey-ecdsa/Cargo.toml
+++ b/crates/uselesskey-ecdsa/Cargo.toml
@@ -5,9 +5,9 @@ edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "ECDSA key fixtures for uselesskey."
+description = "ECDSA key fixtures for deterministic and random cryptographic testing."
 categories = ["development-tools::testing"]
-keywords = ["ecdsa", "fixtures", "testing", "jwk"]
+keywords = ["ecdsa", "fixtures", "testing", "cryptography", "jwk"]
 readme = "README.md"
 authors.workspace = true
 
