--- a/crates/uselesskey-jsonwebtoken/Cargo.toml
+++ b/crates/uselesskey-jsonwebtoken/Cargo.toml
@@ -5,9 +5,9 @@ edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "jsonwebtoken integration for uselesskey test fixtures."
+description = "jsonwebtoken adapter for deterministic and random cryptographic test fixtures."
 categories = ["development-tools::testing"]
-keywords = ["jwt", "jsonwebtoken", "fixtures", "testing"]
+keywords = ["jwt", "jsonwebtoken", "fixtures", "testing", "cryptography"]
 readme = "README.md"
 authors.workspace = true
 
