feat: add deterministic token fixture generation
- Introduced `uselesskey-token` crate for generating API key, bearer, and OAuth access token fixtures.
- Implemented `TokenFactoryExt` trait to extend the core `Factory` for token generation.
- Added deterministic and random modes for token generation, ensuring stable outputs for the same inputs.
- Included tests to verify the stability and correctness of generated tokens.
- Updated documentation to reflect the new token generation capabilities and examples.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
   "crates/uselesskey-ecdsa",
   "crates/uselesskey-ed25519",
   "crates/uselesskey-hmac",
+  "crates/uselesskey-token",
   "crates/uselesskey-x509",
   "crates/uselesskey-jsonwebtoken",
   "crates/uselesskey-rustls",
